window overflow fix

--- a/css/flagwaver.css
+++ b/css/flagwaver.css
@@ -31,6 +31,7 @@ body,
 .js-flag-canvas {
     width  : 100%;
     height : 100%;
+    overflow : hidden;
 }
 
 .page-header,
